# wasi-example-swc

./: Cargo.toml  README.md
examples/: async-generator.js
src/: main.rs
